Updated 'grade submission testing' project